# family-tree

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
family_tree/: settings.py  urls.py
family_tree/api/: admin.py  apps.py  fields.py  models.py  serializers.py  urls.py  views.py
family_tree/api/migrations/: 0001_initial.py  0002_delete_people.py  0003_initial.py  0004_alter_human_options.py
